src/test/ui/parser/match-refactor-to-expr.stderr
error: expected one of `.`, `?`, `{`, or an operator, found `;`
  --> $DIR/match-refactor-to-expr.rs:6:9
   |
LL |         match
   |         -----
   |         |
   |         while parsing this match expression
   |         help: try removing this `match`
LL |         Some(4).unwrap_or_else(5)
   |                                  - expected one of `.`, `?`, `{`, or an operator here
LL |
LL |         ;
   |         ^ unexpected token

error: aborting due to previous error

